--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ _a_pycache__/
 *.py[cod]
 *$py.class
 
+log/*
+scripts/*
 # C extensions
 *.so
 
@@ -56,7 +58,7 @@ cover/
 *.pot
 
 # Django stuff:
-*.log
+#*.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
